Connected proportional editing gives unexpected results #35590

Closed
opened 2013-05-31 22:12:37 +02:00 by derek watts · 6 comments

%%%--- Operating System, Graphics card ---
Windows 7 64bit
NVidia GeForce 9800GT

- Blender version with error, and version that worked ---

Blender 2.67b has the bug
Blender 2.62 works in a much more predictable manner

- Short description of error ---

When performing G/S/R translations in Connected Proportional Editing Mode, the results become un-smooth if the mesh affected by the translation shares a common vertex. e.g. a cap on a cylinder which uses a central vertex instead of ngons.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open .blend
Enter Edit Mode
Ensure that Proportional Editing is enabled
Ensure that "Connected" is the active mode of falloff and that the AoE is large enough to affect all verts
Move pre-selected verts
Notice lack of continuity in the central circle

%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit NVidia GeForce 9800GT - Blender version with error, and version that worked --- Blender 2.67b has the bug Blender 2.62 works in a much more predictable manner - Short description of error --- When performing G/S/R translations in Connected Proportional Editing Mode, the results become un-smooth if the mesh affected by the translation shares a common vertex. e.g. a cap on a cylinder which uses a central vertex instead of ngons. - Steps for others to reproduce the error (preferably based on attached .blend file) --- >Open .blend >Enter Edit Mode >Ensure that Proportional Editing is enabled >Ensure that "Connected" is the active mode of falloff and that the AoE is large enough to affect all verts >Move pre-selected verts >Notice lack of continuity in the central circle %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Campbell:

Joe's commit 36181 added editmesh_set_connectivity_distance()

It's a strange function trying to include connectivity for weights. I can't find a decent use for it even. Just add a simple Mesh grid, and move a point.
Result doesn't seem to me having any use really...

Originally, the 'connected' option was only meant to restrict proportional edit to what's connected. %%%

%%%Campbell: Joe's commit 36181 added editmesh_set_connectivity_distance() It's a strange function trying to include connectivity for weights. I can't find a decent use for it even. Just add a simple Mesh grid, and move a point. Result doesn't seem to me having any use really... Originally, the 'connected' option was only meant to restrict proportional edit to what's connected. %%%

%%%This was originally added by Martin:
http://lists.blender.org/pipermail/bf-blender-cvs/2010-February/025738.html

I think there are some valid use cases for it, one explained here:
http://lists.blender.org/pipermail/bf-committers/2013-April/039799.html

Perhaps this connected should be split into two options as suggested there. Maybe there's a good way to smooth such connected falloff, but I can't think of a nice algorithm at the moment.%%%

%%%This was originally added by Martin: http://lists.blender.org/pipermail/bf-blender-cvs/2010-February/025738.html I think there are some valid use cases for it, one explained here: http://lists.blender.org/pipermail/bf-committers/2013-April/039799.html Perhaps this connected should be split into two options as suggested there. Maybe there's a good way to smooth such connected falloff, but I can't think of a nice algorithm at the moment.%%%

%%%fixed 2 bugs in editmesh_set_connectivity_distance() which wasnt working well

  • had feedback loop when accumulating distances so the vertex order would change results. r57527
  • the visit-hash wasn't working, causing this bug. r57532.

closing.%%%

%%%fixed 2 bugs in editmesh_set_connectivity_distance() which wasnt working well - had feedback loop when accumulating distances so the vertex order would change results. r57527 - the visit-hash wasn't working, causing this bug. r57532. closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 21b9231d7f

This issue was referenced by 21b9231d7f5a248027c32dcc7daab3318390c20f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35590
No description provided.