fix [#35590] Connected proportional editing gives unexpected results